Fix 1px hero n line on some widths on Safari

--- a/_sass/new-styles/modules/home/_hero.scss
+++ b/_sass/new-styles/modules/home/_hero.scss
@@ -176,7 +176,7 @@
       &-mask {
         left: 0;
         z-index: 3;
-        width: 100%;
+        width: 101%;
       }
 
       &-photo {
